--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-loading-fadein-animated-image",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "test",
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
@@ -42,7 +42,14 @@
     "image",
     "animation",
     "loading",
-    "fade in"
+    "fade in",
+    "progress",
+    "spinner",
+    "activity indicator",
+    "react-native-component",
+    "mobile",
+    "indicator",
+    "image"
   ],
   "repository": {
     "type": "git",
